// Vitest Snapshot v1

exports[`Stack > should allow for gap prop 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "8px",
    }
  }
/>
`;

exports[`Stack > should allow for gap prop 2`] = `
<div
  style={
    {
      "columnGap": "8px",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should allow for gap prop 3`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "rowGap": "8px",
    }
  }
/>
`;

exports[`Stack > should allow overriding styles 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "32px",
    }
  }
/>
`;

exports[`Stack > should allow using style prop 1`] = `
<div
  style={
    {
      "color": "red",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should be polymorhic component 1`] = `
<main
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should be polymorhic component 2`] = `
<footer
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack as column 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack as column 2`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack as column 3`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack as inline 1`] = `
<div
  style={
    {
      "display": "inline-flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack as row 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack as row 2`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack as row 3`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack as row 4`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render Stack with defaults 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render with gap 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "8px",
    }
  }
/>
`;

exports[`Stack > should render with gap 2`] = `
<div
  style={
    {
      "columnGap": "8px",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
/>
`;

exports[`Stack > should render with gap 3`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "rowGap": "8px",
    }
  }
/>
`;

exports[`Stack > should render with justified content 1`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "flex-start",
    }
  }
/>
`;

exports[`Stack > should render with justified content 2`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "flex-end",
    }
  }
/>
`;

exports[`Stack > should render with justified content 3`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "center",
    }
  }
/>
`;

exports[`Stack > should render with justified content 4`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "center",
    }
  }
/>
`;

exports[`Stack > should render with justified content 5`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "flex-start",
    }
  }
/>
`;

exports[`Stack > should render with justified content 6`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "flex-end",
    }
  }
/>
`;

exports[`Stack > should render with justified content 7`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "space-between",
    }
  }
/>
`;

exports[`Stack > should render with justified content 8`] = `
<div
  style={
    {
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "space-around",
    }
  }
/>
`;
